# FerrisScope

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: atomic_write.rs  config.rs  lib.rs  native.rs  types.rs
crates/agent/src/mcp/: mod.rs
crates/agent/src/provider/: anthropic.rs  catalogue.rs  meta.rs  mod.rs  openai_codex.rs  openai_compat.rs
crates/agent/src/session/: mod.rs
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/src/: agent.rs  agent_keyring.rs  agent_mcp.rs  agent_oauth.rs  commands.rs  helm_install.rs  kubectl_install.rs  main.rs  secret_storage.rs  ssh_scratch.rs  state.rs  terminal.rs  updater.rs
crates/app/src/agent_native/: apply.rs  can_i.rs  config_view.rs  diagnose.rs  events.rs  helm.rs  http_fetch.rs  logs.rs  metrics.rs  mod.rs  namespaces.rs  node_shell.rs  node_ssh.rs  nodes_kubelet.rs  pause.rs  pod_exec.rs  pods.rs  portforward.rs  prom.rs  resources.rs  rollout.rs  workload.rs
crates/core/: Cargo.toml
crates/core/src/: atomic_write.rs  cluster.rs  error.rs  fleet.rs  health.rs  kubeconfig.rs  lib.rs  logs.rs  metrics.rs  portforwards.rs  prefs.rs  prom_cache.rs  prometheus.rs  sources.rs  ssh.rs  table_views.rs  watcher.rs
crates/core/src/search/: db.rs  gc.rs  mod.rs  query.rs  writer.rs
crates/core/tests/: kubeconfig.rs  persistence.rs
crates/kube-ext/: Cargo.toml
crates/kube-ext/src/: bootstrap.rs  fetch.rs  lib.rs  portforward.rs  registry.rs  watcher.rs  well_known.rs
crates/kube-ext/src/kinds/: cluster_role_bindings.rs  cluster_roles.rs  config_maps.rs  cron_jobs.rs  custom_resource_definitions.rs  daemon_sets.rs  deployments.rs  endpoint_slices.rs  endpoints.rs  events.rs  helm_charts.rs  helm_releases.rs  horizontal_pod_autoscalers.rs  ingress_classes.rs  ingresses.rs  jobs.rs  leases.rs  limit_ranges.rs  mod.rs  mutating_webhook_configurations.rs  namespaces.rs  network_policies.rs  nodes.rs  persistent_volume_claims.rs  persistent_volumes.rs  pod_disruption_budgets.rs  pod_template.rs  pods.rs  priority_classes.rs  replica_sets.rs  replication_controllers.rs  resource_quotas.rs  role_bindings.rs  roles.rs  secrets.rs  service_accounts.rs  services.rs  stateful_sets.rs  storage_classes.rs  validating_webhook_configurations.rs
crates/kube-ext/src/well_known/: gateway_api.rs
crates/kube-ext/tests/: integration_apply.rs  integration_gateway_api.rs  integration_logs_helm.rs  integration_rbac.rs  integration_reflector.rs  projections.rs
crates/kube-ext/tests/snapshots/: projections__configmap_detail.snap  projections__configmap_immutable_detail.snap  projections__configmap_row.snap  projections__cronjob_detail.snap  projections__cronjob_row.snap  projections__daemonset_detail.snap  projections__daemonset_row.snap  projections__deployment_detail.snap  projections__deployment_row.snap  projections__endpointslice_detail.snap  projections__endpointslice_row.snap  projections__gateway_detail.snap  projections__gateway_row.snap  projections__gatewayclass_detail.snap  projections__gatewayclass_row.snap  projections__hpa_detail.snap  projections__hpa_row.snap  projections__httproute_detail.snap  projections__httproute_row.snap  projections__ingress_detail.snap  projections__ingress_row.snap  projections__job_succeeded_detail.snap  projections__job_succeeded_row.snap  projections__limitrange_detail.snap  projections__limitrange_row.snap  projections__networkpolicy_detail.snap  projections__networkpolicy_row.snap  projections__node_cordoned_row.snap  projections__node_ready_row.snap  projections__pod_pending_imagepull_row.snap  projections__pod_running_row.snap  projections__pv_available_detail.snap  projections__pv_available_row.snap  projections__pvc_bound_detail.snap  projections__pvc_bound_row.snap  projections__replicaset_detail.snap  projections__replicaset_row.snap  projections__resourcequota_detail.snap  projections__resourcequota_row.snap  projections__secret_tls_detail.snap  (+7 more)
crates/mimalloc-ext/: Cargo.toml
crates/mimalloc-ext/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: fixtures.rs  kind.rs  lib.rs
design/: .design-canvas.state.json  Helmsman v2 - Design principles.html  Helmsman v2.html  data.jsx  helmsman-v2.jsx  hv2-dock.jsx  hv2-rail.jsx  hv2-settings.jsx  hv2-ui.jsx  icon.md  shared.jsx
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/tests/: smoke.spec.ts
packaging/linux/: README.md  install.sh
screenshots/: README.md
tests/fixtures/k8s/: configmap.json  configmap_immutable.json  cronjob.json  daemonset.json  deployment.json  endpointslice.json  hpa.json  ingress.json  job_succeeded.json  limitrange.json  networkpolicy.json  node_cordoned.json  node_ready.json  pod_pending_imagepull.json  pod_running.json  pv_available.json  pvc_bound.json  replicaset.json  resourcequota.json  secret_tls.json  service_clusterip.json  service_externalname.json  service_loadbalancer.json  statefulset.json
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
ui/coverage/: clover.xml  coverage-final.json  index.html
ui/coverage/src/: api.ts.html  index.html  store.ts.html  theme.ts.html
ui/src/: App.tsx  api.events.test.ts  api.test.ts  api.ts  index.css  main.tsx  store.test.ts  store.ts  theme.test.ts  theme.ts  types.ts
ui/src/components/: AppHeader.tsx  BulkBar.tsx  ClusterBar.tsx  ClusterPanel.tsx  CommandPalette.tsx  ContextMenu.tsx  DetailPanel.tsx  Dock.tsx  FleetLanding.tsx  HeaderToast.tsx  LogPanel.tsx  ModalHost.tsx  NamespaceModal.tsx  NotificationsPanel.tsx  PortForwardsPanel.tsx  Rail.tsx  ResourceTable.test.tsx  ResourceTable.tsx  SettingsPanel.tsx  TitleBar.tsx  rowActions.ts
ui/src/lib/: ansi.test.ts  ansi.tsx  dialog.test.ts  dialog.ts  (+13 more)
(+102 files in other folders)
